--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <h1>Shannon Rayes</h1>
 
-<b>My Name is Shannon!<b>
+<b>My Name is Shannon!</b>
 
-<img src="" alt="Mountains" width="500" height="600">
+<img src="https://en.wikipedia.org/wiki/Mountain#/media/File:Zugspitze_-_June_2018_-_31911455517.jpg" alt="Mountains" width="300" height="200">
 
 I live in Indianapolis, IN but was born and raised in St. Louis, MO
 
 <p style="color:green">I love to travel, hike and experiment in the kitchen!</p>
+
+<button>
+  Click Here to Learn More
+</button>
